// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer rendering Mouse Over should change the class when hovered 1`] = `
<a
  className="normal"
  href="https://www.instagram.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Instagram
</a>
`;

exports[`Footer rendering Mouse Over should change the class when hovered 2`] = `
<a
  className="hovered"
  href="https://www.instagram.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Instagram
</a>
`;

exports[`Footer rendering Mouse Over should change the class when hovered 3`] = `
<a
  className="normal"
  href="https://www.instagram.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Instagram
</a>
`;

exports[`Footer rendering initial state is rendered 1`] = `
<a
  className="normal"
  href="http://www.instagram.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Instagram
</a>
`;
